--- a/web/src/features/hostdashboard/hostmessages/styles/sass/hostMessages.css
+++ b/web/src/features/hostdashboard/hostmessages/styles/sass/hostMessages.css
@@ -87,20 +87,9 @@
   background-color: #e0e0e0;
   flex-shrink: 0;
 }
-.contact-list-modal .contact-list-list .contact-item-content .contact-item-image-container.no-accommodation-image {
-  margin-right: 2.75rem;
-}
-.contact-list-modal .contact-list-list .contact-item-content .contact-item-image-container.no-accommodation-image .contact-item-profile-image {
-  position: absolute;
-  width: 2.5rem;
-  height: 2.5rem;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 .contact-list-modal .contact-list-list .contact-item-content .contact-item-text-container {
   height: 100%;
-  width: 100%;
+  width: 62.5%;
   padding-right: 1rem;
 }
 .contact-list-modal .contact-list-list .contact-item-content .contact-item-text-container p {
@@ -123,8 +112,62 @@
   font-weight: 400;
   font-size: 0.75em;
   color: #000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .contact-list-modal .contact-list-list .contact-item-content .contact-item-text-container .contact-item-subtitle #status {
+  font-weight: 501;
+  font-size: smaller;
+  color: #000;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-image-container {
+  position: static;
+  height: 100%;
+  width: 35%;
+  margin-right: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-image-container .contact-item-profile-image {
+  position: static;
+  width: 2.5rem;
+  height: 2.5rem;
+  top: 0;
+  left: 0;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-text-container {
+  height: 100%;
+  width: 100%;
+  padding-right: 1rem;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-text-container p {
+  margin: 0;
+  padding: 0;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-text-container .contact-item-full-name {
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: #000;
+  padding: 0;
+  margin: 0;
+  margin-top: 0.5rem;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-text-container .contact-item-subtitle {
+  font-family: "Kanit", sans-serif;
+  padding: 0;
+  margin: 0;
+  font-weight: 400;
+  font-size: 0.75em;
+  color: #000;
+  max-height: 50%;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.contact-list-modal .contact-list-list .contact-item-content.no-accommodation-image .contact-item-text-container .contact-item-subtitle #status {
   font-weight: 501;
   font-size: smaller;
   color: #000;
