--- a/web/src/features/hostdashboard/hostmessages/styles/sass/chatscreen/_hostChatScreen.scss
+++ b/web/src/features/hostdashboard/hostmessages/styles/sass/chatscreen/_hostChatScreen.scss
@@ -226,7 +226,7 @@
             justify-content: flex-start;
         }
 
-        .message-image {
+        .message-image, .message-video {
             max-width: 100%;
             max-height: 200px;
             border-radius: 8px;
