--- a/web/src/features/guestdashboard/guestmessages/styles/sass/bookingtab/_guestBookingTab.scss
+++ b/web/src/features/guestdashboard/guestmessages/styles/sass/bookingtab/_guestBookingTab.scss
@@ -1,4 +1,4 @@
-.host-booking-tab {
+.guest-booking-tab {
     display: flex;
     flex-direction: column;
     padding-right: 2rem;
@@ -6,7 +6,9 @@
     gap: 1rem;
     max-height: 85vh;
     min-width: 16rem;
+
     overflow-y: auto;
+    
 
     &::-webkit-scrollbar {
         width: 0.25rem;
@@ -144,26 +146,5 @@
         }
 
     }
-
-    .earnings {
-        h4 {
-            font-weight: 505;
-            font-size: 0.95rem;
-        }
-
-        margin-right: 2rem;
-
-        .rent-nights,
-        .cleaning-fee,
-        .service-fee,
-        .total-earnings {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-        padding-bottom: 1rem;
-        border-bottom: solid black 1px;
-    }
-
 
 }
