--- a/web/src/features/guestdashboard/guestmessages/styles/sass/chatscreen/_guestChatScreen.scss
+++ b/web/src/features/guestdashboard/guestmessages/styles/sass/chatscreen/_guestChatScreen.scss
@@ -1,8 +1,8 @@
-.host-chat-components {
+.guest-chat-components {
     display: flex;
     flex-direction: row;
 
-    .host-chat-screen {
+    .guest-chat-screen {
         background-color: #fff;
         display: flex;
         flex-direction: column;
@@ -14,7 +14,7 @@
         border-left: 0.05rem rgb(150, 150, 150) solid;
         border-right: 0.05rem rgb(150, 150, 150) solid;
 
-        .host-chat-header {
+        .guest-chat-header {
             display: flex;
             width: 100%;
             margin: 0 auto;
@@ -30,7 +30,7 @@
                 margin-left: 1rem;
             }
 
-            .profile-img {
+            .guest-profile-img {
                 width: 2.5em;
                 height: 2.5em;
                 border-radius: 50%;
@@ -39,12 +39,13 @@
                 margin-bottom: 1rem;
             }
 
-            .host-chat-header-grid {
+
+            .guest-chat-header-grid {
                 margin-left: 0.5rem;
 
             }
 
-            .host-chat-header-grid p {
+            .guest-chat-header-grid p {
                 margin: 0;
                 font-size: 0.7rem;
                 font-weight: 500;
@@ -59,6 +60,7 @@
                 margin: 0;
                 padding: 0;
             }
+
         }
 
         .chat-screen {
@@ -67,11 +69,11 @@
             height: 100%;
             overflow-y: auto;
 
-            .chat-message.received {
+            .guest-chat-message.received {
                 margin-bottom: 1rem;
                 margin-left: 1.25rem;
 
-                .message-header {
+                .guest-message-header {
                     display: flex;
                     flex-direction: row;
                     margin-bottom: 0.25rem;
@@ -79,8 +81,8 @@
                     align-items: center;
                 }
 
-                .message-content {
-                    background-color: rgb(196, 230, 197);
+                .guest-message-content {
+                    background-color: rgb(91, 126, 158);
                     color: black;
                     display: inline-block;
                     border-radius: 1rem;
@@ -90,48 +92,45 @@
                     word-wrap: break-word;
                 }
 
-                .message-attachments {
+                .guest-message-attachments {
                     justify-content: flex-start;
                 }
             }
 
-            .chat-message.sent {
+            .guest-chat-message.sent {
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
                 margin-bottom: 1rem;
                 margin-right: 1.25rem;
-
-                .message-header {
-                    display: flex;
-                    flex-direction: row-reverse;
-                    margin-bottom: 0.5rem;
-                    gap: 0.5rem;
-                    align-items: center;
-                }
-
-                .message-content {
-                    display: inline-block;
-                    background-color: rgb(91, 126, 158);
-
-                    color: black;
-                    border-radius: 1rem;
-                    padding: 0.3rem 1.25rem;
-                    text-align: right;
-                    margin-left: auto;
-                    max-width: 70%;
-                    word-wrap: break-word;
-                }
-
-                .message-attachments {
-                    justify-content: flex-end;
-                }
             }
 
+            .guest-message-header {
+                display: flex;
+                flex-direction: row-reverse;
+                margin-bottom: 0.5rem;
+                gap: 0.5rem;
+                align-items: center;
+            }
 
+            .guest-message-content {
+                display: inline-block;
+                background-color: rgb(196, 230, 197);
+                color: black;
+                border-radius: 1rem;
+                padding: 0.3rem 1.25rem;
+                text-align: right;
+                margin-left: auto;
+                max-width: 70%;
+                word-wrap: break-word;
+            }
+
+            .guest-message-attachments {
+                justify-content: flex-end;
+            }
         }
 
-        .chat-input {
+        .guest-chat-input {
             display: flex;
             justify-self: flex-end;
             flex-direction: row;
@@ -141,14 +140,14 @@
             height: 10.5%;
             position: relative;
 
-            .add-attachment {
+            .guest-add-attachment {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 height: 100%;
                 width: 10%;
 
-                .add-file-button {
+                .guest-add-file-button {
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -170,7 +169,7 @@
 
             }
 
-            .message-input-textarea {
+            .guest-message-input-textarea {
                 background-color: rgb(217, 217, 217);
                 height: 30%;
                 width: 80%;
@@ -191,7 +190,7 @@
                 }
             }
 
-            .message-input-send-button {
+            .guest-message-input-send-button {
                 position: absolute;
                 background: none;
                 border: none;
@@ -200,21 +199,20 @@
                 &:hover {
                     color: grey;
                 }
-
             }
         }
 
-        .sender-name {
+        .guest-sender-name {
             font-size: 0.9rem;
             color: grey;
         }
 
-        .message-time {
+        .guest-message-time {
             font-size: 0.9rem;
             color: grey;
         }
 
-        .message-attachments {
+        .guest-message-attachments {
             display: flex;
             gap: 8px;
             flex-wrap: wrap;
@@ -242,7 +240,7 @@
         }
     }
 
-    .host-chat-buttons {
+    .guest-chat-buttons {
         @media (max-width: 600px) {
             width: 85%;
         }
