Added a new function that opems a screen overlay containing all the pictures

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -3,6 +3,7 @@
 @use "booking-engine/listing.scss";
 @use "booking-engine/bookingoverview.scss";
 @use "booking-engine/paymentConfirmPage.scss";
+@use "booking-engine/overlay.scss";
 //Base
 @use "base/header.scss";
 @use "base/footer.scss";
