--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -9,6 +9,7 @@
 @use "base/footer.scss";
 @use "base/MenuBar.scss";
 @use "base/SearchBar.scss";
+@use "base/HamburgerMenu.scss";
 //Auth
 @use "auth/login.scss";
 @use "auth/register.scss";
