--- a/web/src/features/hostdashboard/HostDashboard.module.css
+++ b/web/src/features/hostdashboard/HostDashboard.module.css
@@ -60,7 +60,7 @@
     flex-direction: column;
     justify-content: flex-end;
     overflow: hidden;
-    height: 48vh;
+    height: 40vh;
     width: 17vw;
     margin: 1rem;
     border-radius: 1rem;
@@ -82,23 +82,22 @@
   }
   
   .accommodationText {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     padding: 0.75rem 1rem;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.6), transparent);
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 0.25rem;
+    color: black;
   }
   
   .accommodationTitle {
     font-size: 1rem;
     font-weight: 600;
-    line-height: 1.2;
+    max-width: 90%;
     margin: 0;
   }
   
