--- a/web/src/styles/sass/booking-engine/listing.scss
+++ b/web/src/styles/sass/booking-engine/listing.scss
@@ -13,14 +13,14 @@ $shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
     justify-content: space-between;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: auto;
-    margin-top: 0px;
-    margin-bottom: 30px;
-}
+// .container {
+//     display: flex;
+//     flex-direction: column;
+//     width: 90%;
+//     margin: auto;
+//     margin-top: 0px;
+//     margin-bottom: 30px;
+// }
 
 .detailInfo {
     width: 69%;
