Fixed an issue where the search icon on the landing page was displayed on appview

--- a/web/src/pages/home/homePage.css
+++ b/web/src/pages/home/homePage.css
@@ -1194,7 +1194,7 @@ body.hide-header .app-header {
   }
 
   .domits-searchbarCon {
-    padding-top: 15px;
+    display: none;
   }
 
   .domits-iconsContainer {
