--- a/web/src/styles/sass/base/header.scss
+++ b/web/src/styles/sass/base/header.scss
@@ -6,7 +6,7 @@ $button-font-size: 18px;
 $button-radius: 10px;
 $box-shadow-color: #0d1a2626;
 $hover-background: #3fb3663a;
-$breakpoint-lg: 1024px;
+$breakpoint-lg: 1250px;
 $breakpoint-md: 768px;
 $breakpoint-sm: 480px;
 
@@ -47,6 +47,7 @@ $breakpoint-sm: 480px;
 
       @media screen and (max-width: $breakpoint-lg) {
         margin-left: 3vw;
+        display: none;
       }
 
       @media screen and (max-width: $breakpoint-md) {
