--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -14,6 +14,11 @@
 @use "auth/login.scss";
 @use "auth/register.scss";
 
+//GuestDashboard
+@use "guestdashboard/guestDashboard.scss";
+@use "guestdashboard/Pages.scss";
+@use "guestdashboard/GuestBooking.scss";
+
 :root {
   --primary-color: #0D9813;
   --secondary-color: #003366;
