--- a/web/src/pages/travelinnovationlab/ninedots.css
+++ b/web/src/pages/travelinnovationlab/ninedots.css
@@ -30,7 +30,7 @@
 .header-two {
     display: flex;
     align-items: center;
-    justify-content: center;
+    width: 100%;
     padding: 0 10vw;
     gap: 15%;
     
