--- a/web/src/styles/sass/guestdashboard/guestDashboard.scss
+++ b/web/src/styles/sass/guestdashboard/guestDashboard.scss
@@ -1,333 +1,443 @@
-// Variables
-$main-green: #0D9813;
-$hover-green: #6CD46F;
-$light-gray: #f9f9f9;
-$shadow-color: rgba(0, 0, 0, 0.1);
-$radius: 15px;
-$transition: 0.3s;
-
-.GuestDashboard-container {
-  .dashboards,
-  .dashboard {
-    display: grid;
-    grid-template-columns: 250px auto;
-    gap: 5%;
-  }
-
-  .dashboardSections {
+/* .container {
     display: flex;
     flex-direction: column;
-  }
+    width: 90%;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+} */
 
-  .wijzers {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    cursor: pointer;
-    width: 200px;
-    padding: 5px 1rem 5px 1vh;
-    border: 0.1px solid black;
-    border-radius: $radius;
-    margin-bottom: 15px;
-    height: 8vh;
-    box-sizing: border-box;
-    text-align: center;
-    font-size: 1rem;
-    transition: all $transition ease;
+.dashboards {
+  display: grid;
+  grid-template-columns: 250px auto;
+  gap: 5%;
+}
 
-    img {
-      object-fit: cover;
-    }
+.dashboard {
+  display: grid;
+  grid-template-columns: 250px auto;
+}
 
-    &:hover,
-    &.active {
-      background-color: var(--domits-guest-green);
-      color: white;
+.Dashboard_h2 {
+  position: absolute;
+  top: 13%;
+  left: 5%;
+  font-size: 1.6rem;
+}
 
-      p {
-        color: white;
-      }
-    }
+.dashboardSections {
+  margin-left: 100px;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+}
 
-    &.disabled:hover {
-      cursor: not-allowed;
-      box-shadow: none;
-      border: 0.5px solid black;
-    }
-  }
+.wijzers {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: pointer;
+  margin-bottom: 15px;
+  align-items: center;
+  width: 200px;
+  border: 0.1px solid black;
+  border-radius: 15px;
+  padding: 5px;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  text-align: center;
+  height: 8vh;
+  padding-left: 1vh;
+  font-size: 1rem;
+  padding-right: 1rem;
+  justify-content: flex-start;
+}
 
-  .contentContainer {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+.wijzers img {
+  object-fit: cover;
+}
 
-  .reviewColumn {
-    width: 48%;
-    min-width: 155px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-  }
+.wijzers:hover {
+  background-color: var(--domits-guest-green);
+  transition: .3s;
+  color: white;
+}
 
-  .reviewBox {
-    margin: 10px 5px 0 0;
-    padding: 10px;
-    height: 100%;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 10px;
-    flex-wrap: wrap;
-  }
+.wijzers.active {
+  background-color: var(--domits-guest-green);
+  color: white;
+}
 
-  .review-tab {
-    display: flex;
-    flex-direction: column;
-    margin: 5%;
-    padding: 12px;
-    border-radius: $radius;
-    animation: fade-up 1s;
+.wijzers.active p {
+  color: white;
+}
 
-    &:hover {
-      box-shadow: 4px 4px $main-green;
-      transition: $transition;
-    }
-  }
+.disabled:hover {
+  cursor: not-allowed;
+  box-shadow: none;
+  border: 0.5px solid black;
+}
 
-  .review-date {
-    color: $main-green;
-  }
+.contentContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-  .review-delete {
-    align-self: end;
-    width: 40px;
-    height: 40px;
-    border: none;
-    padding: 0;
-    background-color: white;
+.reviewColumn {
+  width: 48%;
+  height: auto;
+  margin: 10px;
+  min-width: 155px;
+  display: flex;
+  flex-direction: column;
+}
 
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.2);
-    }
-  }
+.reviewBox {
+  margin-right: 5px;
+  margin-top: 10px;
+  padding: 10px;
+  height: 100%;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 10px;
+  flex-wrap: wrap;
+}
 
-  .review-alert {
-    margin: 10%;
-  }
+.review-tab {
+  display: flex;
+  flex-direction: column;
+  border: 2px;
+  border-radius: 15px;
+  margin: 5%;
+  animation: fade-up 1s;
+  padding: 12px;
+}
 
-  .cross {
-    width: 30px;
-    height: 30px;
-  }
+.review-tab:hover {
+  box-shadow: 4px 4px #0D9813;
+  transition: .3s;
+}
 
-  .content {
-    display: flex;
-    justify-content: center;
-    gap: 15%;
-    padding: 20px;
+.review-date {
+  color: #0D9813;
+}
 
-    .leftContent {
-      height: 360px;
-    }
-  }
+.review-delete {
+  align-self: end;
+  width: 40px;
+  height: 40px;
+  box-shadow: none;
+  padding: 0;
+  border: none;
+  background-color: white;
+}
 
-  .bookingBox,
-  .messageBox {
-    background-color: #fff;
-    border-radius: $radius;
-    padding: 20px;
-    box-shadow: 0px 2px 4px $shadow-color;
-    margin-bottom: 20px;
-    width: 60%;
+.review-delete:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
 
-    img {
-      width: 20%;
-      height: auto;
-      border-radius: $radius;
-      margin-top: 10px;
-    }
+.review-alert {
+  margin: 10%;
+}
 
-    button {
-      align-self: flex-end;
-      padding: 10px 20px;
-      font-size: 14px;
-      border: none;
-      border-radius: $radius;
-      cursor: pointer;
-    }
-  }
+.cross {
+  width: 30px;
+  height: 30px;
+}
 
-  .viewAllBooking {
-    color: $main-green;
-    text-decoration: none;
-  }
-
-  .personalInfoContent {
-    flex: 1;
-    width: 100%;
-    padding: 20px;
-    margin-left: 1px;
-    flex-direction: column;
-  }
-
-  .accomodation-side {
-    flex: 2;
-    padding: 20px;
-  }
-
-  .infoBox {
-    background-color: #fff;
-    border-radius: $radius;
-    padding: 20px;
-    margin-bottom: 10px;
-    box-shadow: 0px 2px 4px $shadow-color;
-    display: flex;
-    align-items: center;
-    width: auto;
-
-    i {
-      margin-right: 10px;
-      color: darken($main-green, 5%);
-    }
-
-    span {
-      margin-right: auto;
-      font-size: 1.3rem;
-      font-weight: 400;
-    }
-
-    p {
-      font-size: 1.3rem;
-      font-weight: 300;
-    }
-  }
-
-  .button.last-button {
-    margin-top: 60px;
-  }
-
-  .button i {
-    margin-right: 10px;
-    color: #888;
-  }
-
-  .icon {
-    width: 24px;
-    height: 24px;
-    padding: 5px;
-    border-radius: 12px;
-    border: 1px solid #ccc;
-    object-fit: contain;
-    margin-right: 10px;
-    background-color: $light-gray;
-    display: inline-block;
-  }
-
-  .personal-info-header {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-
-  .edit-icon-background {
-    background-color: $main-green;
-    border-radius: $radius;
-    padding: 0.4rem;
-    margin-left: 5%;
-    width: 2rem;
-    height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    cursor: pointer;
-    text-align: center;
-
-    &:hover {
-      background-color: $hover-green;
-    }
-
-    .guest-edit-icon,
-    .guest-check-icon {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      object-fit: contain;
-    }
-
-    .guest-edit-icon {
-      width: 1.6rem;
-      height: 1.6rem;
-    }
-
-    .guest-check-icon {
-      width: 2.5rem;
-      height: 2.5rem;
-    }
-  }
-
-  .guest-edit-input {
-    font-size: 1.3rem;
-    font-weight: 300;
-    margin-left: -2%;
-  }
-
-  @keyframes fade-up {
-    0% {
+@keyframes fade-up {
+  0% {
       opacity: 0;
       transform: translateY(30px) scale(0.9);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0px) scale(1);
-    }
   }
 
-  @media screen and (max-width: 768px) {
-    .dashboardSections {
+  100% {
+      opacity: 1;
+      transform: translateY(0px) scale(1);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .dashboardSections {
       visibility: hidden;
       width: 0;
       height: 0;
-    }
   }
+}
 
-  @media screen and (max-width: 830px) {
-    .dashboards,
-    .dashboard {
+@media screen and (max-width: 830px) {
+  .dashboards {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-    }
-
-    .wijzers {
-      width: 90%;
-    }
   }
 
-  @media (max-width: 480px) {
-    .reviewColumn {
+  .dashboard {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
+
+  .wijzers {
+      width: 90%;
+  }
+}
+
+.button i {
+  margin-right: 10px;
+  color: #888;
+}
+
+
+.content {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 15%;
+}
+
+.leftContent {
+  height: 360px;
+}
+
+.bookingBox {
+  height: 60%;
+  margin-bottom: 20px;
+  overflow: auto;
+}
+
+.Booking_place {
+  font-size: 1rem;
+  margin-top: 90px;
+  margin-left: 210px;
+  font-weight: 500;
+}
+
+
+
+.messages-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-family: Arial, sans-serif;
+}
+
+.Booking_messages {
+  font-size: 1rem;
+  margin-top: 50px;
+  margin-left: 210px;
+  font-weight: 400;
+}
+
+.badge {
+  background-color: #28a745;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: -48.75px;
+}
+
+
+.messageBoxes {
+  height: 40%;
+  overflow: auto;
+}
+
+.viewAllBooking {
+  color: #0D9813;
+  position: absolute;
+  top: 16.1%;
+  left: 30%;
+}
+
+.bookingBox,
+.messageBox {
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  width: 60%;
+}
+
+.bookingBox img {
+  width: 20%;
+  height: auto;
+  border-radius: 15px;
+  margin-top: 10px;
+}
+
+.Booking_photo {
+  width: 455px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 15px;
+  margin-top: 10px;
+  margin-left: 101px;
+}
+
+.Booking_host {
+  font-size: 1rem;
+  font-weight: 400;
+  margin-left: 210px;
+}
+
+.Booking_messages_centre {
+  font-size: 1rem;
+  margin-left: 225px;
+  font-weight: 400;
+  margin-top: 30px;
+}
+
+.messageBox button {
+  align-self: flex-end;
+  padding: 10px 20px;
+  font-size: 14px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.personalInfoContent {
+
+  flex-direction: column;
+  margin-left: 1px;
+  width: 100%;
+  flex: 1;
+  padding: 20px;
+
+}
+
+.accomodation-side {
+  flex: 2;
+  padding: 20px;
+}
+
+.infoBox {
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  width: auto;
+  gap: 10px;
+}
+
+.infoBox i {
+  margin-right: 10px;
+  color: #0A760F;
+}
+
+.infoBox span {
+  margin-right: auto;
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+.infoBox p {
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.button.last-button {
+  margin-top: 60px;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
+  margin-right: 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 12px;
+  background-color: #f9f9f9;
+}
+
+.personal-info-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  /* Ruimte tussen de koptekst en de bewerkknop */
+}
+
+.edit-icon-background {
+  background-color: #0D9813;
+  border-radius: 15px;
+  padding: 0.4rem;
+  margin-left: 5%;
+  width: 2rem;
+  height: 2rem;
+  text-align: center;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.edit-icon-background:hover {
+  background-color: #6CD46F;
+}
+
+.guest-edit-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1.6rem;
+  height: 1.6rem;
+  object-fit: contain;
+}
+
+.guest-check-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 2.5rem;
+  height: 2.5rem;
+  object-fit: contain;
+}
+
+.guest-edit-input {
+  font-size: 1.3rem;
+  font-weight: 300;
+  margin-left: -2%;
+}
+
+@media (max-width: 480px) {
+  .reviewColumn {
       width: 100%;
 
       h2.review-header {
-        font-size: 1.5em;
+          font-size: 1.5em;
       }
-    }
+  }
 
-    .infoBox {
+  .infoBox {
       padding: 10px;
       font-size: 0.8em;
       width: 90%;
       flex-wrap: wrap;
-    }
+  }
 
-    .dashboardSections {
+  .dashboardSections {
       visibility: hidden;
       width: 0;
       height: 0;
-    }
   }
 }
