Optimalized scss files
Improved styling for the login and header

--- a/web/src/styles/sass/auth/login.scss
+++ b/web/src/styles/sass/auth/login.scss
@@ -73,40 +73,36 @@ $no-account-font-size: 14px;
       }
     }
 
-    .loginButton {
-      width: 100%;
-      padding: $input-padding;
-      background: $guest-green;
-      border-radius: $border-radius;
-      border: none;
-      box-shadow: none;
-      color: white;
-      font-size: $button-font-size;
-      cursor: pointer;
-      margin-top: 15px;
-
-      &:hover {
-        background: $hover-green;
-      }
-    }
-
+    .loginButton,
     .registerButtonLogin {
       width: 100%;
       padding: $input-padding;
-      background: $host-blue;
       border-radius: $border-radius;
       border: none;
       box-shadow: none;
       color: white;
       font-size: $button-font-size;
-      display: block;
-      text-align: center;
-      text-decoration: none;
       cursor: pointer;
       margin-top: 15px;
 
-      &:hover {
-        background: $hover-blue;
+      &.loginButton {
+        background: $guest-green;
+
+        &:hover {
+          background: $hover-green;
+        }
+      }
+
+      &.registerButtonLogin {
+        background: $host-blue;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+
+        &:hover {
+          background: $hover-blue;
+
+        }
       }
     }
 
