--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -18,6 +18,7 @@
 @use "guestdashboard/guestDashboard.scss";
 @use "guestdashboard/Pages.scss";
 @use "guestdashboard/GuestBooking.scss";
+@use "guestdashboard/mainDashboardGuest.scss";
 
 :root {
   --primary-color: #0D9813;
