Modified the header to adjust for the guestdashboard sidebar

--- a/web/src/styles/sass/base/footer.scss
+++ b/web/src/styles/sass/base/footer.scss
@@ -16,6 +16,8 @@ $breakpoint-sm: 480px;
 // Footer Styling
 .main-footer {
   background-color: $footer-bg;
+  position: relative;
+  z-index: 1000;
 
   .footer-content {
     margin: auto;
