--- a/web/src/styles/sass/guestdashboard/Pages.scss
+++ b/web/src/styles/sass/guestdashboard/Pages.scss
@@ -21,6 +21,7 @@
     top: 0;
     left: -250px; /* Hidden by default */
     height: calc(100vh - 60px); /* Full height minus the header height */
+    min-height: 500px;
     background: #f8f8f8;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     padding: 1rem;
