--- a/web/src/features/hostdashboard/hostmessages/styles/sass/chatscreen/hostChatScreen.scss
+++ b/web/src/features/hostdashboard/hostmessages/styles/sass/chatscreen/hostChatScreen.scss
@@ -1,8 +1,8 @@
-.guest-chat-components {
+.host-chat {
     display: flex;
     flex-direction: row;
 
-    .guest-chat-screen {
+    .chat-screen-container {
         background-color: #fff;
         display: flex;
         flex-direction: column;
@@ -14,7 +14,7 @@
         border-left: 0.05rem rgb(150, 150, 150) solid;
         border-right: 0.05rem rgb(150, 150, 150) solid;
 
-        .guest-chat-header {
+        .chat-header {
             display: flex;
             width: 100%;
             margin: 0 auto;
@@ -30,7 +30,7 @@
                 margin-left: 1rem;
             }
 
-            .guest-profile-img {
+            .profile-img {
                 width: 2.5em;
                 height: 2.5em;
                 border-radius: 50%;
@@ -39,19 +39,18 @@
                 margin-bottom: 1rem;
             }
 
-
-            .guest-chat-header-grid {
+            .chat-header-info {
                 margin-left: 0.5rem;
 
-            }
+                p {
+                    margin: 0;
+                    font-size: 0.7rem;
+                    font-weight: 500;
 
-            .guest-chat-header-grid p {
-                margin: 0;
-                font-size: 0.7rem;
-                font-weight: 500;
+                    display: flex;
+                    align-items: center;
+                }
 
-                display: flex;
-                align-items: center;
             }
 
             h3 {
@@ -60,7 +59,6 @@
                 margin: 0;
                 padding: 0;
             }
-
         }
 
         .chat-screen {
@@ -69,11 +67,11 @@
             height: 100%;
             overflow-y: auto;
 
-            .guest-chat-message.received {
+            .chat-message.received {
                 margin-bottom: 1rem;
                 margin-left: 1.25rem;
 
-                .guest-message-header {
+                .message-header {
                     display: flex;
                     flex-direction: row;
                     margin-bottom: 0.25rem;
@@ -81,8 +79,8 @@
                     align-items: center;
                 }
 
-                .guest-message-content {
-                    background-color: rgb(91, 126, 158);
+                .message-content {
+                    background-color: rgb(196, 230, 197);
                     color: black;
                     display: inline-block;
                     border-radius: 1rem;
@@ -92,45 +90,48 @@
                     word-wrap: break-word;
                 }
 
-                .guest-message-attachments {
+                .message-attachments {
                     justify-content: flex-start;
                 }
             }
 
-            .guest-chat-message.sent {
+            .chat-message.sent {
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
                 margin-bottom: 1rem;
                 margin-right: 1.25rem;
+
+                .message-header {
+                    display: flex;
+                    flex-direction: row-reverse;
+                    margin-bottom: 0.5rem;
+                    gap: 0.5rem;
+                    align-items: center;
+                }
+
+                .message-content {
+                    display: inline-block;
+                    background-color: rgb(91, 126, 158);
+
+                    color: black;
+                    border-radius: 1rem;
+                    padding: 0.3rem 1.25rem;
+                    text-align: right;
+                    margin-left: auto;
+                    max-width: 70%;
+                    word-wrap: break-word;
+                }
+
+                .message-attachments {
+                    justify-content: flex-end;
+                }
             }
 
-            .guest-message-header {
-                display: flex;
-                flex-direction: row-reverse;
-                margin-bottom: 0.5rem;
-                gap: 0.5rem;
-                align-items: center;
-            }
 
-            .guest-message-content {
-                display: inline-block;
-                background-color: rgb(196, 230, 197);
-                color: black;
-                border-radius: 1rem;
-                padding: 0.3rem 1.25rem;
-                text-align: right;
-                margin-left: auto;
-                max-width: 70%;
-                word-wrap: break-word;
-            }
-
-            .guest-message-attachments {
-                justify-content: flex-end;
-            }
         }
 
-        .guest-chat-input {
+        .chat-input {
             display: flex;
             justify-self: flex-end;
             flex-direction: row;
@@ -140,14 +141,14 @@
             height: 10.5%;
             position: relative;
 
-            .guest-add-attachment {
+            .add-attachment {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 height: 100%;
                 width: 10%;
 
-                .guest-add-file-button {
+                .add-file-button {
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -169,7 +170,7 @@
 
             }
 
-            .guest-message-input-textarea {
+            .message-input-textarea {
                 background-color: rgb(217, 217, 217);
                 height: 30%;
                 width: 80%;
@@ -190,7 +191,7 @@
                 }
             }
 
-            .guest-message-input-send-button {
+            .message-input-send-button {
                 position: absolute;
                 background: none;
                 border: none;
@@ -199,20 +200,21 @@
                 &:hover {
                     color: grey;
                 }
+
             }
         }
 
-        .guest-sender-name {
+        .sender-name {
             font-size: 0.9rem;
             color: grey;
         }
 
-        .guest-message-time {
+        .message-time {
             font-size: 0.9rem;
             color: grey;
         }
 
-        .guest-message-attachments {
+        .message-attachments {
             display: flex;
             gap: 8px;
             flex-wrap: wrap;
@@ -240,7 +242,7 @@
         }
     }
 
-    .guest-chat-buttons {
+    .host-chat-buttons {
         @media (max-width: 600px) {
             width: 85%;
         }
