--- a/web/src/features/guestdashboard/guestmessages/styles/sass/chatscreen/guestChatScreen.scss
+++ b/web/src/features/guestdashboard/guestmessages/styles/sass/chatscreen/guestChatScreen.scss
@@ -1,8 +1,8 @@
-.host-chat-components {
+.guest-chat {
     display: flex;
     flex-direction: row;
 
-    .host-chat-screen {
+    .chat-screen-container {
         background-color: #fff;
         display: flex;
         flex-direction: column;
@@ -14,7 +14,7 @@
         border-left: 0.05rem rgb(150, 150, 150) solid;
         border-right: 0.05rem rgb(150, 150, 150) solid;
 
-        .host-chat-header {
+        .chat-header {
             display: flex;
             width: 100%;
             margin: 0 auto;
@@ -39,18 +39,19 @@
                 margin-bottom: 1rem;
             }
 
-            .host-chat-header-grid {
+
+            .chat-header-info {
                 margin-left: 0.5rem;
 
-            }
+                p {
+                    margin: 0;
+                    font-size: 0.7rem;
+                    font-weight: 500;
 
-            .host-chat-header-grid p {
-                margin: 0;
-                font-size: 0.7rem;
-                font-weight: 500;
+                    display: flex;
+                    align-items: center;
+                }
 
-                display: flex;
-                align-items: center;
             }
 
             h3 {
@@ -59,6 +60,7 @@
                 margin: 0;
                 padding: 0;
             }
+
         }
 
         .chat-screen {
@@ -67,7 +69,7 @@
             height: 100%;
             overflow-y: auto;
 
-            .chat-message.received {
+            .guest-chat-message.received {
                 margin-bottom: 1rem;
                 margin-left: 1.25rem;
 
@@ -80,7 +82,7 @@
                 }
 
                 .message-content {
-                    background-color: rgb(196, 230, 197);
+                    background-color: rgb(91, 126, 158);
                     color: black;
                     display: inline-block;
                     border-radius: 1rem;
@@ -95,40 +97,37 @@
                 }
             }
 
-            .chat-message.sent {
+            .guest-chat-message.sent {
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
                 margin-bottom: 1rem;
                 margin-right: 1.25rem;
-
-                .message-header {
-                    display: flex;
-                    flex-direction: row-reverse;
-                    margin-bottom: 0.5rem;
-                    gap: 0.5rem;
-                    align-items: center;
-                }
-
-                .message-content {
-                    display: inline-block;
-                    background-color: rgb(91, 126, 158);
-
-                    color: black;
-                    border-radius: 1rem;
-                    padding: 0.3rem 1.25rem;
-                    text-align: right;
-                    margin-left: auto;
-                    max-width: 70%;
-                    word-wrap: break-word;
-                }
-
-                .message-attachments {
-                    justify-content: flex-end;
-                }
             }
 
+            .message-header {
+                display: flex;
+                flex-direction: row-reverse;
+                margin-bottom: 0.5rem;
+                gap: 0.5rem;
+                align-items: center;
+            }
 
+            .message-content {
+                display: inline-block;
+                background-color: rgb(196, 230, 197);
+                color: black;
+                border-radius: 1rem;
+                padding: 0.3rem 1.25rem;
+                text-align: right;
+                margin-left: auto;
+                max-width: 70%;
+                word-wrap: break-word;
+            }
+
+            .message-attachments {
+                justify-content: flex-end;
+            }
         }
 
         .chat-input {
@@ -200,7 +199,6 @@
                 &:hover {
                     color: grey;
                 }
-
             }
         }
 
@@ -242,7 +240,7 @@
         }
     }
 
-    .host-chat-buttons {
+    .chat-buttons {
         @media (max-width: 600px) {
             width: 85%;
         }
